[gd_scene load_steps=36 format=3 uid="uid://de11wfnraklxo"]

[ext_resource type="Script" path="res://src/ui/level_ui/level_ui.gd" id="1_vogrj"]
[ext_resource type="FontFile" uid="uid://sfmk3hf8i5ir" path="res://assets/fonts/CrimsonText-SemiBoldItalic.ttf" id="2_klg6i"]
[ext_resource type="PackedScene" uid="uid://c15k8jyhng3o8" path="res://src/ui/level_ui/context_menu/context_menu.tscn" id="3_d06lw"]
[ext_resource type="Texture2D" uid="uid://b5fi8m8o6eqr5" path="res://assets/ui/action-bar.png" id="4_16e8e"]
[ext_resource type="PackedScene" uid="uid://dij75oxvp88at" path="res://src/ui/level_ui/clickable_sprite/ClickableSprite.tscn" id="5_xwert"]
[ext_resource type="Texture2D" uid="uid://jce6i6vgo6aw" path="res://assets/ui/ability_frame.png" id="6_1bvqs"]
[ext_resource type="Texture2D" uid="uid://yyf21jmknuog" path="res://assets/ui/people_icon.png" id="7_x4kq1"]
[ext_resource type="Texture2D" uid="uid://crwbjao08acdh" path="res://assets/ui/button_bg_2.png" id="8_p0iwl"]
[ext_resource type="FontFile" uid="uid://d2acik6tmked" path="res://assets/fonts/CrimsonText-Regular.ttf" id="9_si7uh"]
[ext_resource type="LabelSettings" uid="uid://pt8dsvwp6slh" path="res://src/ui/level_ui/sprite_button_label_settings.tres" id="10_l210w"]
[ext_resource type="Texture2D" uid="uid://c1e28wyab7lw4" path="res://assets/characters/angels/layla-body.png" id="11_d0e63"]
[ext_resource type="Texture2D" uid="uid://c0hgc11pjw5br" path="res://assets/portraits/portrait-frame.png" id="12_ub2pe"]
[ext_resource type="Texture2D" uid="uid://ccuuhcpgpokd0" path="res://assets/ui/undo-icon_2.png" id="13_rubvd"]
[ext_resource type="Script" path="res://src/ui/level_ui/overlays.gd" id="14_5iogs"]
[ext_resource type="Texture2D" uid="uid://b3wak6eo8qvck" path="res://assets/bgs/game_start_1.png" id="15_nrkrw"]
[ext_resource type="FontFile" uid="uid://2t7grnmmukb" path="res://assets/fonts/CrimsonText-SemiBold.ttf" id="16_knrsr"]
[ext_resource type="PackedScene" uid="uid://dcxbsateoow86" path="res://src/ui/level_ui/overlays/RewardOverlay.tscn" id="17_cd6ru"]
[ext_resource type="Texture2D" uid="uid://bewuictajmvjq" path="res://assets/characters/nightmares/bloat-halfbody.png" id="18_55yaq"]
[ext_resource type="Script" path="res://src/ui/level_ui/strategy.gd" id="19_lk734"]
[ext_resource type="PackedScene" uid="uid://df3drhl7cxiip" path="res://src/shaders/speedlines/sample.tscn" id="21_bd8v6"]
[ext_resource type="Script" path="res://src/ui/level_ui/sprite_button.gd" id="22_frlcl"]
[ext_resource type="Texture2D" uid="uid://dfgoxv05ub7wo" path="res://assets/etc/gear.png" id="23_wm81a"]

[sub_resource type="Gradient" id="Gradient_t4rwf"]
offsets = PackedFloat32Array(0.330532, 1)
colors = PackedColorArray(0.0829914, 0.0859375, 0.0748647, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_orn50"]
gradient = SubResource("Gradient_t4rwf")

[sub_resource type="LabelSettings" id="LabelSettings_vrnde"]
font = ExtResource("2_klg6i")
font_size = 42
font_color = Color(0.91388, 0.93, 0.8556, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3uust"]
font = ExtResource("9_si7uh")
font_size = 60
outline_size = 12
outline_color = Color(0.21, 0.21, 0.21, 1)

[sub_resource type="Gradient" id="Gradient_nepuh"]
colors = PackedColorArray(0.178604, 0.410124, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fryhh"]
gradient = SubResource("Gradient_nepuh")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_l1hol"]
font = ExtResource("9_si7uh")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_6ql6o"]
font = ExtResource("9_si7uh")
font_size = 23

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_33crl"]

[sub_resource type="LabelSettings" id="LabelSettings_5lnyq"]
font = ExtResource("9_si7uh")
font_size = 24
font_color = Color(0.184314, 0.168627, 0.0980392, 1)
outline_size = 8
outline_color = Color(0.59, 0.55755, 0.413, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgurw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c3o4f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3w84"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
script = ExtResource("1_vogrj")

[node name="SubActions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1058.0
offset_top = 636.0
offset_right = 1058.0
offset_bottom = 636.0
mouse_filter = 1

[node name="Bar" type="ColorRect" parent="SubActions"]
layout_mode = 0
offset_left = -39.0
offset_top = 89.0
offset_right = -36.0
offset_bottom = 159.0
rotation = 3.14159
mouse_filter = 1

[node name="Line2D" type="Line2D" parent="SubActions"]
position = Vector2(-24, 2.00002)
scale = Vector2(0.516667, 0.656249)
points = PackedVector2Array(-34, 28, 20, 2)
width = 4.0
sharp_limit = 10.0
round_precision = 32
antialiased = true

[node name="AbilityList" type="Control" parent="SubActions"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_right = 4.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SubActions/AbilityList"]
layout_direction = 3
layout_mode = 0
offset_left = 53.0
offset_top = 20.0
offset_right = 379.0
offset_bottom = 283.0

[node name="Control" type="Control" parent="SubActions/AbilityList/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
mouse_filter = 1

[node name="Bg" type="Sprite2D" parent="SubActions/AbilityList/VBoxContainer/Control"]
position = Vector2(161, 36)
scale = Vector2(5.03125, 1)
texture = SubResource("GradientTexture2D_orn50")
flip_h = true

[node name="ColorRect" type="ColorRect" parent="SubActions/AbilityList/VBoxContainer/Control"]
visible = false
layout_mode = 0
offset_top = 4.0
offset_right = 322.0
offset_bottom = 68.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SubActions/AbilityList/VBoxContainer/Control"]
modulate = Color(0.93, 0.93, 0.93, 1)
layout_mode = 0
offset_left = 29.0
offset_top = 5.0
offset_right = 294.0
offset_bottom = 69.0

[node name="AbilityName" type="Label" parent="SubActions/AbilityList/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Priorityâ†‘"
label_settings = SubResource("LabelSettings_vrnde")
vertical_alignment = 1

[node name="ContextMenu" parent="." instance=ExtResource("3_d06lw")]
offset_right = 0.0
offset_bottom = 0.0
scale = Vector2(0.5, 0.5)

[node name="Action" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 251.0
offset_top = 1154.0
offset_right = 251.0
offset_bottom = 1154.0
mouse_filter = 1

[node name="Bg" type="Sprite2D" parent="Action"]
visible = false
position = Vector2(183, 45.5)
texture = ExtResource("4_16e8e")

[node name="AbilityContainer" type="Control" parent="Action"]
anchors_preset = 0
offset_left = 24.0
offset_top = -12.0
offset_right = 64.0
offset_bottom = 28.0
mouse_filter = 1

[node name="AbilityFrame1" parent="Action/AbilityContainer" instance=ExtResource("5_xwert")]
position = Vector2(120, 126)
scale = Vector2(3, 3)
texture = ExtResource("6_1bvqs")

[node name="AbilityFrame2" parent="Action/AbilityContainer" instance=ExtResource("5_xwert")]
position = Vector2(207, 44)
scale = Vector2(3, 3)
texture = ExtResource("6_1bvqs")

[node name="AbilityFrame3" parent="Action/AbilityContainer" instance=ExtResource("5_xwert")]
position = Vector2(291, 125)
scale = Vector2(3, 3)
texture = ExtResource("6_1bvqs")

[node name="AbilityFrame4" parent="Action/AbilityContainer" instance=ExtResource("5_xwert")]
position = Vector2(375, 44)
scale = Vector2(3, 3)
texture = ExtResource("6_1bvqs")

[node name="AbilityFrame5" parent="Action/AbilityContainer" instance=ExtResource("5_xwert")]
position = Vector2(459, 125)
scale = Vector2(3, 3)
texture = ExtResource("6_1bvqs")

[node name="Popularity" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 21.0
offset_right = 133.0
offset_bottom = 53.0

[node name="Control" type="Control" parent="Popularity"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="Popularity/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_x4kq1")
centered = false

[node name="Label" type="Label" parent="Popularity"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
text = "100%"
vertical_alignment = 1

[node name="Debug" type="Label" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 160.0
offset_right = 63.0
offset_bottom = 183.0
text = "DEBUG"

[node name="Label" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.0
offset_right = 52.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 23

[node name="Portrait" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 8.0
offset_top = 636.0
offset_right = 8.0
offset_bottom = 636.0
mouse_filter = 1

[node name="image" type="Sprite2D" parent="Portrait"]
position = Vector2(208, 467)
scale = Vector2(0.789179, 0.789179)
texture = ExtResource("11_d0e63")

[node name="frame" type="Sprite2D" parent="Portrait"]
visible = false
position = Vector2(33, 5)
texture = ExtResource("12_ub2pe")

[node name="name" type="Label" parent="Portrait"]
layout_mode = 0
offset_left = 387.0
offset_top = 442.0
offset_right = 512.0
offset_bottom = 511.0
text = "Talya"
label_settings = SubResource("LabelSettings_3uust")

[node name="ColorRect" type="ColorRect" parent="Portrait"]
layout_mode = 0
offset_left = 378.0
offset_top = 503.0
offset_right = 932.0
offset_bottom = 513.0

[node name="UndoMove" type="Button" parent="."]
layout_mode = 0
offset_left = 908.0
offset_right = 948.0
offset_bottom = 40.0
scale = Vector2(2, 2)
mouse_filter = 1
icon = ExtResource("13_rubvd")
flat = true
icon_alignment = 1

[node name="Overlays" type="Control" parent="."]
visible = false
z_index = 99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("14_5iogs")

[node name="GameStart" type="Sprite2D" parent="Overlays"]
visible = false
texture = ExtResource("15_nrkrw")
centered = false

[node name="Victory" type="Control" parent="Overlays"]
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
scale = Vector2(3, 3)
mouse_filter = 1

[node name="VictoryLabel" type="Label" parent="Overlays/Victory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = 49.0
offset_right = 33.5
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("16_knrsr")
theme_override_font_sizes/font_size = 70
text = "VICTORY"

[node name="ColorRect" type="ColorRect" parent="Overlays/Victory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = 145.0
offset_right = 187.0
offset_bottom = 147.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Overlays/Victory"]
layout_mode = 0
offset_left = 163.5
offset_top = 158.0
offset_right = 466.5
offset_bottom = 257.0

[node name="HBoxContainer" type="HBoxContainer" parent="Overlays/Victory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoulsSavedLabel" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Souls saved"

[node name="SoulsSavedCount" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Overlays/Victory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GoldGainedLabel" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gold gained"

[node name="GoldGainedCount" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Overlays/Victory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExpGainedLabel" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exp gained"

[node name="ExpGainedCount" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Overlays/Victory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemGainedLabel" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item gained!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Overlays/Victory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilityGainedLabel" type="Label" parent="Overlays/Victory/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability gained!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Overlays/Victory"]
modulate = Color(1, 1, 1, 0.239216)
position = Vector2(319.749, 180.226)
rotation = 1.57094
scale = Vector2(5.63069, 10.0212)
texture = SubResource("GradientTexture2D_fryhh")

[node name="TurnStart" type="Control" parent="Overlays"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="Overlays/TurnStart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.5
offset_top = -52.5
offset_right = 256.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER TURN"
label_settings = SubResource("LabelSettings_l1hol")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Overlays/TurnStart"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1

[node name="ColorRect2" type="ColorRect" parent="Overlays/TurnStart/Control"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control2" type="Control" parent="Overlays/TurnStart"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="Overlays/TurnStart/Control2"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="Overlays/TurnStart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.466667)

[node name="RewardOverlay" parent="Overlays" instance=ExtResource("17_cd6ru")]
visible = false

[node name="NpcPortrait" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="NpcPortrait"]
layout_mode = 0
offset_left = 395.0
offset_top = 44.0
offset_right = 575.0
offset_bottom = 46.0

[node name="name" type="Label" parent="NpcPortrait"]
layout_mode = 0
offset_left = 401.0
offset_top = 25.0
offset_right = 572.0
offset_bottom = 48.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Bloat"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="NpcPortrait"]
position = Vector2(607, 56)
texture = ExtResource("18_55yaq")

[node name="DialogueBg" type="ColorRect" parent="NpcPortrait"]
layout_mode = 0
offset_left = 395.0
offset_top = 47.0
offset_right = 576.0
offset_bottom = 131.0
mouse_filter = 1
color = Color(0, 0, 0, 0.231373)

[node name="Dialogue" type="Label" parent="NpcPortrait"]
layout_mode = 0
offset_left = 399.0
offset_top = 55.0
offset_right = 570.0
offset_bottom = 123.0
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 10
text = "Dialogue text goes here"
autowrap_mode = 3

[node name="Objective" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Label2" type="Label" parent="Objective"]
layout_mode = 0
offset_left = 56.0
offset_top = 92.0
offset_right = 522.0
offset_bottom = 160.0
text = "â€¢ Prevent enemies from getting in the Cathedral"
label_settings = SubResource("LabelSettings_6ql6o")

[node name="StrategyMenu" type="Control" parent="."]
anchors_preset = 0
offset_left = 23.0
offset_top = 160.0
offset_right = 230.0
offset_bottom = 598.0
mouse_filter = 1
mouse_default_cursor_shape = 3
script = ExtResource("19_lk734")

[node name="VBoxContainer" type="VBoxContainer" parent="StrategyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 24.0
offset_right = 90.0
offset_bottom = 76.0
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_33crl")
flat = true
script = ExtResource("22_frlcl")

[node name="Sprite2D" type="Sprite2D" parent="MenuButton"]
scale = Vector2(0.796875, 0.8125)
texture = ExtResource("23_wm81a")
centered = false

[node name="Label" type="Label" parent="MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_5lnyq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TEST" parent="." instance=ExtResource("21_bd8v6")]
visible = false

[node name="ActionContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -100.0
offset_right = -74.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StrategyDropDown" type="Button" parent="ActionContainer"]
custom_minimum_size = Vector2(110, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_bgurw")
flat = true
script = ExtResource("22_frlcl")

[node name="Sprite2D" type="Sprite2D" parent="ActionContainer/StrategyDropDown"]
scale = Vector2(0.201852, 0.28125)
texture = ExtResource("8_p0iwl")
centered = false

[node name="Label" type="Label" parent="ActionContainer/StrategyDropDown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Strategy"
label_settings = ExtResource("10_l210w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnOrder" type="Button" parent="ActionContainer"]
custom_minimum_size = Vector2(134, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_c3o4f")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ActionContainer/TurnOrder"]
position = Vector2(-1.52588e-05, 0)
scale = Vector2(0.246296, 0.28125)
texture = ExtResource("8_p0iwl")
centered = false

[node name="Label" type="Label" parent="ActionContainer/TurnOrder"]
layout_mode = 0
offset_right = 134.0
offset_bottom = 44.0
text = "Turn Order"
label_settings = ExtResource("10_l210w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Endturn" type="Button" parent="ActionContainer"]
custom_minimum_size = Vector2(110, 45)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_s3w84")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ActionContainer/Endturn"]
scale = Vector2(0.201852, 0.28125)
texture = ExtResource("8_p0iwl")
centered = false

[node name="Label" type="Label" parent="ActionContainer/Endturn"]
layout_mode = 0
offset_right = 109.0
offset_bottom = 44.0
text = "End Turn"
label_settings = ExtResource("10_l210w")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="SubActions/AbilityList/VBoxContainer/Control" to="SubActions/AbilityList/VBoxContainer/Control" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SubActions/AbilityList/VBoxContainer/Control" to="SubActions/AbilityList/VBoxContainer/Control" method="_on_mouse_exited"]
[connection signal="pressed" from="UndoMove" to="." method="_on_undo_move_pressed"]
[connection signal="pressed" from="ActionContainer/StrategyDropDown" to="." method="_on_strategy_drop_down_pressed"]
[connection signal="pressed" from="ActionContainer/TurnOrder" to="." method="_on_turn_order_pressed"]
[connection signal="pressed" from="ActionContainer/Endturn" to="." method="_on_end_turn_pressed"]
